# shitty-blog

./: Cargo.toml  README.md
migrations/20161224205453_create_posts/: up.sql
src/: lib.rs  main.rs
templates/: application.html.tera  edit_post.html.tera  index.html.tera  new_post.html.tera
