[package]
name = "diesel_rocket"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]

[dependencies]
diesel = { version = "0.9.0", features = ["postgres"] }
diesel_codegen = { version = "0.9.0", features = ["postgres"] }
dotenv = "0.8.0"
rocket = "0.1.0"
rocket_codegen = "0.1.0"
rocket_contrib = { version = "0.1.0", features = ["tera_templates"] }
serde = "0.8.0"
serde_derive = "0.8.0"
serde_json = "0.8.0"
